--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,9 @@ urllib3==2.3.0
 Werkzeug==3.1.3
 gunicorn
 psutil
+python-dotenv==1.0.0
+flask-limiter==3.5.0
+password-validator==1.0.1
+flask-talisman==1.0.0
+marshmallow==3.20.1
+python-magic==0.4.27
